--- a/package.json
+++ b/package.json
@@ -14,14 +14,22 @@
   },
   "author": "Manpreet",
   "license": "ISC",
-  "bugs": { 
+  "bugs": {
     "url": "https://github.com/manpreet-singh10196/recipe-api/issues"
   },
   "homepage": "https://github.com/manpreet-singh10196/recipe-api#readme",
   "devDependencies": {
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "babel-polyfill": "^6.26.0"
+  }
 }
